force-app/main/default/objects/school__c/school__c.object-meta.xml
<CustomObject>
    <label>school</label>
    <nameField>
        <label>school1_name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>school</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>