force-app/main/default/objects/school__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>ICSE</fullName>
            </value>
            <value>
                <fullName>MP BOARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>