force-app/main/default/objects/school__c/fields/fees__c.field-meta.xml
<CustomField>
    <fullName>fees__c</fullName>
    <label>Fees</label>
    <summarizedField>student__c.Fees__c</summarizedField>
    <summaryForeignKey>student__c.school1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>