force-app/main/default/objects/school__c/fields/no_of_teacher__c.field-meta.xml
<CustomField>
    <fullName>no_of_teacher__c</fullName>
    <description>for  no of teacher</description>
    <label>no of teacher</label>
    <summaryForeignKey>Teacher__c.school1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>