force-app/main/default/objects/school__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>address__c</columns>
    <columns>email__c</columns>
    <columns>phone_number__c</columns>
    <columns>Board__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>